--- a/proposal/proposal_template.Rmd
+++ b/proposal/proposal_template.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Project Proposal"
 subtitle: "due October 11, 2021 by 11:59 PM "
-author: "Your names and team name here"
-date: ""
+author: "Danielle Mensah, Haby Sow, and Colin Lee"
+date: "10/11/2021"
 output: pdf_document
 ---
 
@@ -10,10 +10,14 @@ output: pdf_document
 
 ```{r load-packages, message = FALSE, warning = FALSE}
 library(tidyverse) 
+
+
 ``` 
 
 # Load Data
 ```{r load-data, message = F}
+
+student <- readr::read_csv("student-mat.csv")
 ```
 
 # Introduction and Data, including Research Questions
@@ -22,7 +26,10 @@ library(tidyverse)
 
 # Glimpse
 
-(Please use `glimpse` for your data, uploaded into the data folder, here.)
+```{r}
+glimpse(student)
+```
+
 
 # Data Analysis Plan
 
