updated introduction and included data analysis plan

--- a/proposal/proposal_template.Rmd
+++ b/proposal/proposal_template.Rmd
@@ -22,9 +22,11 @@ student <- readr::read_csv("student-mat.csv")
 
 # Introduction and Data, including Research Questions
 
-For our research project, we plan to study two questions with respect to alcohol consumption amongst students in math courses in secondary school. Although this is not a traditional “global health” dataset, there is merit to analyzing this data from a health perspective. Alcohol consumption impacts personal health and cognition, but is also impacted by various other factors, such as family and the environment, just like many other health conditions or illnesses. Thus, the first question is what family circumstances are correlated with student alcohol consumption, which may allow us to gain better insight into how family education, presence, or occupation may be associated with alcohol use. The second question we seek to answer is how student alcohol consumption correlates with student life whether it be through absences, class failures, marks received on exams, activities outside of school, or desire to attend university. 
+For our research project, we plan to study two questions with respect to alcohol consumption amongst students in math courses in secondary school. Although this is not a traditional “global health” dataset, there is merit to analyzing this data from a health perspective. Alcohol consumption impacts personal health and cognition, but is also impacted by various other factors, such as family and the environment, just like many other health conditions or illnesses. Thus, the first question is what family circumstances are correlated with student alcohol consumption, which may allow us to gain better insight into how family education, presence, or occupation may be associated with alcohol use. The second question we seek to answer is how student alcohol consumption correlates with student life whether it be through absences, class failures, marks received on exams, activities outside of school, or desire to attend university.
 
-To accomplish this task, we will be utilizing a dataset we found on Kaggle, which was collected in the 2005-2006 school year. Although the dataset was made available by University of California Irvine (UCI) Machine Learning, the source itself was revealed in a paper called “Using Data Mining to Predict Secondary School Student Performance.” In the paper, the authors state that the data was collected through paper questionnaires with predefined answers for most questions. This questionnaire was developed in conjunction with and reviewed by school staff and students (Cortez et al 2). The questionnaire was answered by all students attending a math course in two public schools, Gabriel Pereira or Mousinho da Silveira, which added up to 395 students (Cortez et al 2).  The questionnaire collected information through 37 questions, of which 33 exist as variables in the dataset (Cortez et al 2). However, as of now, we plan to most closely assess the following variables for our first question regarding potential family factors correlated with alcohol consumption: family size, parental cohabitation status, mother’s education level, father’s education level, mother’s job, father’s job, guardian, family relationship quality, and family educational support. For our second question regarding alcohol consumption in student life, we want to utilize the following variables: desire to pursue higher education, first, second, and final grades, number of failed courses, and student health level. Across both questions, we will investigate their correlation amongst the variables of reported daily and weekly alcohol consumption. 
+To accomplish this task, we will be utilizing a dataset we found on Kaggle, which collected data on student self-reported alcohol consumption in Portuguese math class in two secondary schools, Gabriel Pereira and Moushino de Silveira during the 2005-2006 school year. In Portuguese secondary schools, ages typically range from 15-19, but this dataset also includes a few individuals from 20 - 22 years old. Additionally, unlike the USA, the minimum drinking age is 18 years old, so drinking prevalence at this educational level might be less comparable to high schools in the USA, but since drinking is legal for students nearing graduation, this may be more parallel to drinking trends in US universities. 
+
+Although the dataset was made available by University of California Irvine (UCI) Machine Learning, the source itself was revealed in a paper called “Using Data Mining to Predict Secondary School Student Performance.” In the paper, the authors state that the data was collected through paper questionnaires with predefined answers for most questions. This questionnaire was developed in conjunction with and reviewed by school staff and students (Cortez et al 2). The questionnaire was answered by all students attending a math course in two public schools, Gabriel Pereira or Mousinho da Silveira, which added up to 395 students (Cortez et al 2).  The questionnaire collected information through 37 questions, of which 33 exist as variables in the dataset (Cortez et al 2). However, as of now, we plan to most closely assess the following variables for our first question regarding potential family factors correlated with alcohol consumption: family size, parental cohabitation status, mother’s education level, father’s education level, mother’s job, father’s job, guardian, family relationship quality, and family educational support. For our second question regarding alcohol consumption in student life, we want to utilize the following variables: desire to pursue higher education, first, second, and final grades, number of failed courses, and student health level. Across both questions, we will investigate their correlation amongst the variables of reported daily and weekly alcohol consumption. 
 # Glimpse
 
 ```{r}
@@ -34,8 +36,12 @@ glimpse(student)
 
 # Data Analysis Plan
 
-(Specify the outcome (response, Y) and predictor (explanatory, X) variables you will use to answer your question, as well as the comparison groups you will use, if applicable. You may include very preliminary exploratory data analysis, including some summary statistics and visualizations, along with some explanation on how they help you learn more about your data. Note the statistical method(s) that you believe will be useful in answering your question(s). 
-What results from these specific statistical methods are needed to support your hypothesized answer?)
+To answer the research question : What family circumstances are correlated with student alcohol consumption, which may allow us to gain better insight into how family education, presence, or occupation may be associated with alcohol use , we use Dalc (Weekday alcohol consumption)  and Walc(Weekend alcohol consumption)  as response variables and we will use famrel(Quality of family relationships , Pstatus(Parent’s cohabitation) , Medu (Mother’s education) , Fedu (Father’s education), romantic (With a romantic relationship) Mjob(Mother’s job) , Fjob(Father’s job) , guardian (Student’s guardian) , famsup (Family support) as explanatory variables.
+To answer the research question:How student alcohol consumption correlates with student life whether it be through absences, class failures, marks received on exams, activities outside of school, or desire to attend university? , we will use Dalc (Weekday alcohol consumption)  and Walc(Weekend alcohol consumption)  as response variables and we will use failure(Number of past class) , activities(Extra-curricular activities) , goout (Going out with friends) , absences(Number of absences ) and G1, G2, G3 which are respectively First period grade, Second period grade Final period grade , studytime (Weekly study time).
+We will compare alcohol consumption among different groups of age , sex and family size. We will try to find if there is a difference in the means alcohol consumption between the sex male and the sex female. We will study the difference in means of alcohol consumption among ages like students younger and students aged of 18 or greater. We will also compare alcohol consumption between students whose family size is less or equal than 3 and students whose family size is greater than 3.
+We will make a scatter plot  visualization and the correlation matrix to visualize the correlations. between the response variable and the explanatory variables.  The scatter plot also will help us to see if the regression model fits the data or to test if our model is good. We will use the summary statistic to find the p_value. For example, from the summary and using the single regression model analysis, we see that the  number of absences is highly associated with weekday alcohol consumption with a p value less than 0.05.  
+The statistical method we will use is multiple regression analysis with anova test, chi square test for categorical variables to find the relationship between a response variable Y and explanatory variables Xi. The p values we obtain indicate if we reject or accept our null hypothesis, that is finding if there is a relationship between the response variable and the explanatory variables. 
+
 
 Citations:
 
