--- a/proposal/proposal_template.Rmd
+++ b/proposal/proposal_template.Rmd
@@ -10,8 +10,8 @@ output: pdf_document
 
 ```{r load-packages, message = FALSE, warning = FALSE}
 library(tidyverse) 
-
-
+library(tidymodels)
+library(readr)
 ``` 
 
 # Load Data
@@ -35,12 +35,43 @@ glimpse(student)
 
 
 # Data Analysis Plan
-
 To answer the research question : What family circumstances are correlated with student alcohol consumption, which may allow us to gain better insight into how family education, presence, or occupation may be associated with alcohol use , we use Dalc (Weekday alcohol consumption)  and Walc(Weekend alcohol consumption)  as response variables and we will use famrel(Quality of family relationships , Pstatus(Parent’s cohabitation) , Medu (Mother’s education) , Fedu (Father’s education), romantic (With a romantic relationship) Mjob(Mother’s job) , Fjob(Father’s job) , guardian (Student’s guardian) , famsup (Family support) as explanatory variables.
-To answer the research question:How student alcohol consumption correlates with student life whether it be through absences, class failures, marks received on exams, activities outside of school, or desire to attend university? , we will use Dalc (Weekday alcohol consumption)  and Walc(Weekend alcohol consumption)  as response variables and we will use failure(Number of past class) , activities(Extra-curricular activities) , goout (Going out with friends) , absences(Number of absences ) and G1, G2, G3 which are respectively First period grade, Second period grade Final period grade , studytime (Weekly study time).
+To answer the research question:How student alcohol consumption correlates with student life whether it be through absences, class failures, marks received on exams, activities outside of school, or desire to attend university? , we will use Dalc (Weekday alcohol consumption)  and Walc(Weekend alcohol consumption)  as response variables and we will use failures(Number of past class) , activities(Extra-curricular activities) , goout (Going out with friends) , absences(Number of absences ) and G1, G2, G3 which are respectively First period grade, Second period grade Final period grade , studytime (Weekly study time).
 We will compare alcohol consumption among different groups of age , sex and family size. We will try to find if there is a difference in the means alcohol consumption between the sex male and the sex female. We will study the difference in means of alcohol consumption among ages like students younger and students aged of 18 or greater. We will also compare alcohol consumption between students whose family size is less or equal than 3 and students whose family size is greater than 3.
 We will make a scatter plot  visualization and the correlation matrix to visualize the correlations. between the response variable and the explanatory variables.  The scatter plot also will help us to see if the regression model fits the data or to test if our model is good. We will use the summary statistic to find the p_value. For example, from the summary and using the single regression model analysis, we see that the  number of absences is highly associated with weekday alcohol consumption with a p value less than 0.05.  
 The statistical method we will use is multiple regression analysis with anova test, chi square test for categorical variables to find the relationship between a response variable Y and explanatory variables Xi. The p values we obtain indicate if we reject or accept our null hypothesis, that is finding if there is a relationship between the response variable and the explanatory variables. 
+
+```{r single regression analysis}
+linear_reg() %>%
+  set_engine("lm") %>%
+  fit(Dalc ~failures, data = student) %>%
+  tidy()
+```
+```{r}
+cor.test(student$Dalc, student$failures, 
+                    method = "pearson")
+```
+
+
+From the summary, we see that there is a positive relationship between alcohol consumption and Number of past class with a p_value of 6.770813e-03. In other words, alcohol consumption and Number of past class are correlated. In this model , Dalc= 6.770813e-03 *faiures + 1.4265564.
+
+The correlation test also shows that the correlation between Dalc and failures is not 0 with a p_value of 0.006771.
+
+
+```{r}
+ggplot(data = student, aes(x = failures, y = Dalc)) +
+  geom_point(alpha=.1) +
+  geom_smooth(method = "lm", 
+              se = FALSE) +
+  labs(
+    title = "Alcohol consumption as a function of Number of past class",
+    x = "Number of past class",
+    y = "Alcohol consumption"
+  )
+```
+
+
+
 
 
 Citations:
