yaml for final report

--- a/final report/finalreport_template.Rmd
+++ b/final report/finalreport_template.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final Report"
 subtitle: "due November 16, 2021 by 11:59 PM "
-author: "Your names and team name here"
-date: ""
+author: "Danielle Mensah, Haby Sow, Colin Lee"
+date: "11/12/2021"
 output: pdf_document
 ---
