--- a/final report/finalreport_template.Rmd
+++ b/final report/finalreport_template.Rmd
@@ -9,6 +9,7 @@ output: pdf_document
 ```{r read_data}
 library(tidyverse)
 library(tidymodels)
+library(ggplot2)
 setwd("/home/guest/R/project01")
 student <- readr::read_csv("data/student-mat.csv")
 
@@ -47,10 +48,31 @@ head(missingval)
 As you can see from this quick check. There are no missing values in our data. Therefore we can move on with further analysis and no clearing of variables needs to be done. I put only the head of the data because it was too long to visually see the whole thing however it is all false.
 
 #Data Wrangling
-There are two big questions that we want answered with this data set: whether a students average alcohol consumption is correlated with their family circumstances and whether alcohol consumption has an effect on student life. Lets first look at some geographgics of our students
+There are two big questions that we want answered with this data set: whether a students average alcohol consumption is correlated with their family circumstances and whether alcohol consumption has an effect on student life. Lets first look at some geographics of our students.
 ```{r geographics}
-
+student%>%
+  ggplot(aes(x = age)) +
+  geom_boxplot()
 ```
+ We can see from the data that the average age of the students tested was about 17 and there was an out liar at age 22. 
+ 
+```{r}
+table(student$age)
+table(student$school)
+table(student$ sex)
+table(student$address)
+table(student$famsize)
+table(student$Pstatus)
+table(student$Medu)
+table(student$Fedu)
+table(student$Mjob)
+table(student$reason)
+table(student$guardian)
+table(student$famsup)
+table(student$internet)
+```
+
+ 
 
 
 
